--- a/floor_search/requirements.txt
+++ b/floor_search/requirements.txt
@@ -7,7 +7,7 @@ chardet==3.0.4
 constantly==15.1.0
 cryptography==2.5
 cssselect==1.0.3
-Django==2.1.5
+django>=2.1.6
 hyperlink==18.0.0
 idna==2.8
 incremental==17.5.0
